# Helm_Lab_Practice

./: CONTRIBUTORS.md  README.md  TASK.md  pyproject.toml
automation/: deploy.py
config/: gunicorn_conf.py  nginx.conf
docker/: Dockerfile  docker-compose.yaml
helm_chart/: Chart.yaml  values.yaml
helm_chart/templates/: configmap.yaml  details-app-deployment.yaml  nginx-deployment.yaml  service.yaml
src/my_app/: details_app.py
src/my_app/templates/: index.html
