[tool.poetry]
name = "helm-detailapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "helm_detailapp"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
